Now a first version with Object to manage the states

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
   <meta name="description" content="fenix Dash">
   <meta name="author" content="iMetricas">
 
-  <link rel="stylesheet" href="build/vendor.css?v=1474312292703">
-  <link rel="stylesheet" href="build/app.css?v=1474312292703">
+  <link rel="stylesheet" href="build/vendor.css?v=1474392643718">
+  <link rel="stylesheet" href="build/app.css?v=1474392643718">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
   <!--[if lt IE 9]>
@@ -18,24 +19,22 @@
 </head>
 
 <body ng-app="fenixDash" layout="column" ng-cloak>
-<md-toolbar>
-    <div ui-view="top" layout="row"></div>
-</md-toolbar>
-<section layout="row" flex>
-  <div flex="20" layout="column">
-    <div ui-view="left"></div>
-    <!--section flex="40"><a ui-sref="hello">hello</a></section>
-    <section flex><a ui-sref="about">about</a></section-->
-  </div>
-  <div flex layout="column">
-    <div ui-view="main"></div>
-    <!--section flex="70">flex="70"</section>
-    <section flex="20">flex="20"</section>
-    <section flex >flex </section-->
-  </div>
-</section>
+  <md-toolbar>
+      <div ui-view="top" layout="row" flex></div>
+  </md-toolbar>
+  <section layout="row" flex>
+    <!--div flex="20" layout="column">
+      <div ui-view="left"></div>
+    </div-->
+    <div flex layout="column">
+      <div ui-view="main"></div>
+      <!--section flex="70">flex="70"</section>
+      <section flex="20">flex="20"</section>
+      <section flex >flex </section-->
+    </div>
+  </section>
 
-  <script src="build/vendor.js?v=1474312292703"></script>
-  <script src="build/app.js?v=1474312292703"></script>
+  <script src="build/vendor.js?v=1474392643718"></script>
+  <script src="build/app.js?v=1474392643718"></script>
 </body>
 </html>
